          \item add \code{thin} to \code{method_control} to control the monitoring,
          \item account for probable odd use input if the \code{XLS_file} is a \code{data.frame}
          (column 1 is of type \code{factor} instead \code{character}),
          \item function will not stop anymore if grain and position number do not match,

          \item a lots of minor improvements.

      }

      \item \code{analyse_SAR.CWOSL()}
        \itemize{
          \item The argument 'sig0' was not passed to \code{calc_OSLLxTxRatio()} as stated
          in the description of the \code{...} argument. Fixed.
      }


      \item \code{merge_RisoeBINfileData()}
        \itemize{
          \item Account for 'implicit list embedding of S4 objects is deprecated' warning by changing
          the code (no visible user effect, apart from no visible warning anymore).
      }


     \item \code{plot_AbanicoPlot()}
        \itemize{
          \item Function got a new argument \code{line.lty} to controll the appearance of additional
          lines.

      }

       \item \code{plot_GrowthCurve()}
        \itemize{
          \item Move \code{call} output in the \code{RLum.Results} output element \code{list}.

      }

      \item \code{read_BIN2R()}
      \itemize{
        \item Add suppurt for BIN-file version 8; thanks for the support by Kristina Thomsen from Risoe.

      }

      \item \code{Risoe.BINfileData-class}{
          \itemize{
            \item Add support for BIN-file version 8.


          }

      }

      \item \code{write_R2BIN()}{
          \itemize{
            \item Add support for BIN-file version 8.


          }

      }


    }



    }

 \subsection{S3-generics}{
   \itemize{
      \item The method \code{subset} for \code{RisoeBINfileData} objects got a new
      argument \code{records.rm}. If set to \code{FALSE} curves are only selected/deselected,
      but not removed all.

    }



    }
  }